# CyberDualEval

./: .env.example  .gitignore  LICENSE  README.md  croissant.json  plot.py  pyproject.toml
configs/: config-all-bare-gpt5.4-medium.yaml  config-all-bare-gpt5.5-medium.yaml  config-all-bare-opus4.6.yaml  config-all-bare-opus4.7.yaml  config-all-bare-sonnet4.6.yaml  config-gpt5.4-framings-refused50.yaml  config-gpt5.5-framings-refused50.yaml  config-opus4.6-framings-refused50.yaml  config-opus4.7-framings-refused50.yaml
docs/: cwe_names_used.json  distribution-and-running.md  ground-truth-cwe-report.json  poc-rubric.md  task_review_spreadsheet.csv  task_review_spreadsheet.xlsx  template.txt
refusal_eval/: __init__.py  claude_code_solver.py  codex_cli_solver.py  dataset.py  judge.py  model_costs.py  oracle.py  prompts.py  sandbox.py  scorer.py  solver.py  task.py
scripts/: backfill_ground_truth_cwes.py  backfill_tws_expert.py  bundle_task_sources.py  create_task_review_spreadsheet.py  nvd_helpers.py  plot_framing_frontier.py  plot_tws_cwe_pies.py  plot_tws_frontier.py  prewarm_vulhub_images.py  publish_benchmark_to_hf.py  run_models.py  sync_benchmark_from_hf.py  write_tws_results_tables.py
tests/: test_backfill_tws_expert.py  test_bundle_task_sources.py  test_claude_code_solver.py  test_codex_cli_solver.py  test_controller.py  test_image_mirror_rewrite.py  test_phase1_helpers.py  test_phase1_plumbing.py  test_phase_independence.py  test_prompt_building.py  test_refusal_detection.py  test_sandbox.py  test_solver_limits.py  test_task_reasoning_config.py  (+2 more)
(+12 files in other folders)
