[project]
name = "cyberagent-bench"
version = "0.1.0"
description = "Measure valid refusal rate for cybersecurity tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "matplotlib",
    "inspect-ai",
    "inspect-cyber",
    "inspect-swe",
    "openai>=1.0.0",
    "anthropic",
    "pytest",
    "pytest-asyncio",
    "huggingface_hub",
    "dotenv",
    "requests>=2.28",
    "itsdangerous>=2.2",
    "flask>=3.0",
    "google-genai",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refusal_eval"]
